--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "^7.11.0",
     "@types/jest": "^26.0.10",
     "babel-jest": "^26.3.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
