--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wolfie",
   "version": "0.0.1",
   "description": "",
-  "main": "lib/index.js",
+  "main": "index.js",
   "engines": {
     "node": "14.x",
     "npm": "6.14.13"
